--- a/Wadoku.css
+++ b/Wadoku.css
@@ -72,8 +72,8 @@ h1 {
 hr {
     margin-right: 0em;
     margin-left: 0em;
-    margin-top: 3em;
-    margin-bottom: 1em;
+    margin-top: 2em;
+    margin-bottom: .8em;
     border: 1px solid -apple-system-tertiary-label ;
     border-bottom: 0px;
     color: -apple-system-secondary-label;
