--- a/Wadoku.css
+++ b/Wadoku.css
@@ -451,7 +451,7 @@ span.etym {
     content: ' ';
 }
 
-.season {
+.season, .count {
     font-size: 80%;
     color: -apple-system-secondary-label;
     border: 1px solid -apple-system-secondary-label;
