--- a/Wadoku.css
+++ b/Wadoku.css
@@ -59,8 +59,8 @@ html.apple_client-panel body {
     }
 }
 
-div.entry + div.entry {
-    margin-top: 4em;
+div.entry {
+    margin-bottom: 2.5em;
 }
 
 h1 {
@@ -70,12 +70,12 @@ h1 {
 }
 
 hr {
-    margin-right: 0em;
-    margin-left: 0em;
+    margin-right: 0;
+    margin-left: 0;
     margin-top: 2em;
     margin-bottom: .8em;
     border: 1px solid -apple-system-tertiary-label ;
-    border-bottom: 0px;
+    border-bottom: 0;
     color: -apple-system-secondary-label;
 }
 span.headword {
@@ -255,7 +255,7 @@ span.etym {
 }
 
 .global .etym {
-    color: inherit;
+    color: -apple-system-secondary-label;
     font-size: inherit;
 }
 
@@ -345,7 +345,7 @@ span.etym {
     margin-right: 4px;
 }
 
-.def > .reflink, .klammer > .reflink {
+.def > .reflink, .klammer > .reflink, .etym > .reflink {
     margin-left: 0;
     margin-right: 0
 }
@@ -467,7 +467,6 @@ span.etym {
 
 .label {
     font-size: 90%;
-    vertical-align: 8%;
     border-width: 2px 4px 2px 4px;
     margin-right: 0.5em;
 }
@@ -609,13 +608,13 @@ html.apple_client-panel {
 html.apple_client-panel body {
     font-size: 14px;
 
-    margin-top: 0px;
+    margin-top: 0;
     margin-left: 1em;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     margin-right: 1em;
 
     color: text;
-    text-shadow: 0px 1px 0px #EEEEEE;
+    text-shadow: 0 1px 0 #EEEEEE;
     line-height: 18px;
 
     overflow-x: hidden;
